--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -27,3 +27,7 @@ jobs:
           name: static-site
       - name: Test artifact download
         run: ls -R
+      - name: Archive site content
+        uses: thedoctor0/zip-release@master
+        with: 
+          filename: site.zip
